--- a/EC2.yaml
+++ b/EC2.yaml
@@ -6,7 +6,7 @@ Resources:
 
         Properties:
 
-            Name: eshani-cluster
+            Name: dgod-cluster
 
             Version: "1.25"
 
