--- a/ec2-instance.yaml
+++ b/ec2-instance.yaml
@@ -1,31 +1,20 @@
+AWSTemplateFormatVersion: 2010-09-09
+Description: Sample EKS cluster using Jenkins and cloudformation 
+
 Resources:
-
-    EKSCluster:
-
-        Type: AWS::EKS::Cluster
-
-        Properties:
-
-            Name: diego-cluster
-
-            Version: "1.25"
-
-            RoleArn: "arn:aws:iam::388328004932:role/AWSEKSRole"
-
-            ResourcesVpcConfig:
-
-                SecurityGroupIds:
-
-                - sg-0d8315f2e7a43714e
-
-                SubnetIds:
-
-                - subnet-0a31af885cfd8721d
-
-                - subnet-01b356a04735bdf93
-
-                EndpointPublicAccess: true
-
-                EndpointPrivateAccess: false
-
-                PublicAccessCidrs: [ "0.0.0.0/0" ]
+    EKSCluster:
+        Type: AWS::EKS::Cluster
+        Properties:
+            Name: diego-eks-cluster
+            Version: "1.25"
+            RoleArn: "arn:aws:iam::388328004932:role/aws-eks-cluster-role"
+            ResourcesVpcConfig:
+                SecurityGroupIds:
+                - sg-0d8315f2e7a43714e
+                SubnetIds:
+                - subnet-0a31af885cfd8721d
+                - subnet-01b356a04735bdf93 
+                EndpointPublicAccess: true
+                EndpointPrivateAccess: false
+                PublicAccessCidrs: [ "0.0.0.0/0" ]
+        
