--- a/ec2-instance.yaml
+++ b/ec2-instance.yaml
@@ -2,19 +2,32 @@ AWSTemplateFormatVersion: 2010-09-09
 Description: Sample EKS cluster using Jenkins and cloudformation 
 
 Resources:
-    EKSCluster:
-        Type: AWS::EKS::Cluster
-        Properties:
-            Name: ronald-eks-cluster
-            Version: "1.25"
-            RoleArn: "arn:aws:iam::388328004932:role/aws-eks-cluster-role"
-            ResourcesVpcConfig:
-                SecurityGroupIds:
-                - sg-0d8315f2e7a43714e
-                SubnetIds:
-                - subnet-0a31af885cfd8721d
-                - subnet-01b356a04735bdf93 
-                EndpointPublicAccess: true
-                EndpointPrivateAccess: false
-                PublicAccessCidrs: [ "0.0.0.0/0" ]
-        
+  Cluster:
+    Type: AWS::EKS::Cluster
+    Properties:
+      Name: ronald-EKS-Cluster
+      RoleArn: arn:aws:iam::388328004932:role/AWSEKSRole
+      Version: "1.25"
+      ResourcesVpcConfig:
+        SecurityGroupIds:
+          - sg-06b9c2f393d81edfb
+        SubnetIds:
+          - subnet-0d43564d38acc22e5
+          - subnet-0b7a5cbdc6acb38dc
+  Nodegroup:
+    Type: AWS::EKS::Nodegroup
+    DependsOn: Cluster
+    Properties:
+      ClusterName: ronald-EKS-Cluster
+      NodegroupName: ronaldNodegroup
+      InstanceTypes:
+        - t2.micro
+      DiskSize: 8
+      NodeRole: arn:aws:iam::388328004932:role/eks-node-group
+      ScalingConfig:
+        MinSize: 2
+        DesiredSize: 3
+        MaxSize: 4
+      Subnets:
+        - subnet-0d43564d38acc22e5
+        - subnet-0b7a5cbdc6acb38dc
